--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,36 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 option(PIX_RAW_BUILD_C_API "Build C API" OFF)
 option(PIX_RAW_INSTALL "Generate install target" OFF)
 
-# 依赖 LibRaw - 使用 FetchContent 下载
+# 依赖 LibRaw - 使用 FetchContent 下载到 third_party/LibRaw/src
 include(FetchContent)
 
+# 先清理可能的不完整下载
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/third_party/LibRaw/src/.git" AND
+   NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/third_party/LibRaw/src/libraw")
+    message(WARNING "检测到不完整的 LibRaw 源码，将重新下载")
+    file(REMOVE_RECURSE "${CMAKE_CURRENT_SOURCE_DIR}/third_party/LibRaw/src")
+endif()
+
 FetchContent_Declare(
-    libraw
+    libraw_external
     GIT_REPOSITORY https://github.com/LibRaw/LibRaw.git
     GIT_TAG        0.22.0
     SOURCE_DIR     ${CMAKE_CURRENT_SOURCE_DIR}/third_party/LibRaw/src
 )
 
-FetchContent_MakeAvailable(libraw)
+# 禁用 LibRaw 的测试和示例
+set(LIBRAW_ENABLE_EXAMPLES OFF CACHE BOOL "" FORCE)
+
+# 启用 OpenMP 支持以提升性能
+set(LIBRAW_ENABLE_OPENMP ON CACHE BOOL "" FORCE)
+
+# 启用 RawSpeed 支持以增强格式兼容性
+set(LIBRAW_ENABLE_RAWSPEED ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(libraw_external)
+
+# 添加 LibRaw 子目录（LibRaw 不原生支持 CMake，使用项目提供的构建配置）
+add_subdirectory(third_party/LibRaw)
 
 # === 核心库 (C++) ===
 add_library(PixRaw STATIC
@@ -34,7 +53,7 @@ add_library(PixRaw STATIC
 target_include_directories(PixRaw PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/libraw/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/LibRaw/src
 )
 
 target_link_libraries(PixRaw
